EDIT: improve buttons + fix overflow-y on layout

--- a/src/buttons/ButtonEmoji/ButtonEmoji.sass
+++ b/src/buttons/ButtonEmoji/ButtonEmoji.sass
@@ -19,6 +19,7 @@
     display: flex
     justify-content: center
     align-items: center
+    transition: background 200ms ease
     +until($tablets)
       display: none
       width: 50px
@@ -26,6 +27,10 @@
       font-size: 2rem
       top: 0
       right: 10px
+    .emoji
+      display: flex
+      justify-content: center
+      align-items: center
   &:hover
     background: none
     .btn
