--- a/src/layouts/ExhibitionLayout.sass
+++ b/src/layouts/ExhibitionLayout.sass
@@ -6,9 +6,13 @@
   position: fixed
   width: 100vw
   height: 100vh
+  max-height: 100vh
+  overflow-y: hidden
   transition: transform 500ms ease
   pointer-events: all
   &.with-aside
+    max-height: 100vh
+    overflow-y: hidden
     transform: translateX(-30vw)
     pointer-events: none
 
@@ -23,6 +27,8 @@
   transform: translateX(0)
   width: 200vw
   height: 100%
+  max-height: 100vh
+  overflow-y: hidden
   pointer-events: none
   +from($desktops)
     width: 170vw
